# HaxMetrics

./: .gitignore  .pre-commit-config.yaml  ACTION_REIMPLEMENTATION_COMPLETE.md  README.md  TESTING_SUMMARY.md  mypy.ini  package.json  pyproject.toml
docs/: ACTION_TYPES_COMPLETE.md  ACTION_TYPES_IMPLEMENTATION.md  DETERMINISTIC_PARSER_IMPLEMENTATION.md  PARSER_TESTING_REPORT.md  STADIUM_IMPLEMENTATION.md
haxball_replay_parser_py/: action.py  actions.py  binary_reader.py  haxball_replay.py  parser.py  player.py  room.py  stadium.py  team_color.py
haxball_replay_parser_py/models/: action_types.py
haxball_replay_parser_py/models/actions/: change_stadium.py  match_start.py
original_script/: game-min.js
src/haxmetrics/: binary_reader.py  cli.py  constants.py  haxball_replay.py  model.py  parser.py
src/haxmetrics/cli/: dump_header.py  dump_tokens.py
src/haxmetrics/io/: decoder.py  hbr2_bridge.py  hbr2_reader.py  probes.py
src/haxmetrics/models/: action_types.py  game.py  player.py  replay_messages.py  room.py  stadium.py  team_color.py
src/haxmetrics/tools/: replay_to_json.js  replay_to_json_any.js  replay_to_json_vm.js
src/haxmetrics/utils/: geometry.py
src/replays/: HBReplay-2025-09-28-23h07m.hbr2  HBReplay-2025-09-30-23h39m.hbr2  prueba.hbr2  prueba_custom.hbr2  test_lirs.hbr2
src/replays/LIRS/: Albania-Poland1.hbr2  Albania-Poland2.hbr2  Albania-Poland3.hbr2  Chile-Uganda.hbr2  Italy-Portugal.hbr2  Portugal-Venezuela.hbr2  SpainVSTurkey.hbr2
src/tests/: test_lirs_replays.py  test_lirs_suite.py  test_parser.py  test_stadium.py
(+40 files in other folders)
